force-app/main/default/objects/Activity/fields/Actual_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Complete_Date__c</fullName>
    <label>Actual Complete Date</label>
    <type>Date</type>
</CustomField>