force-app/main/default/objects/Activity/fields/Anticipated_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Complete_Date__c</fullName>
    <defaultValue>TODAY()+7</defaultValue>
    <label>Anticpated Complete Date</label>
    <type>Date</type>
</CustomField>