force-app/main/default/objects/Activity/fields/Application_Status__c.field-meta.xml
<CustomField>
    <fullName>Application_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Application Status</label>
    <type>Checkbox</type>
</CustomField>