force-app/main/default/objects/Activity/fields/Assignee_if_Different__c.field-meta.xml
<CustomField>
    <fullName>Assignee_if_Different__c</fullName>
    <label>Assignee if Different</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aly Garvin</fullName>
            </value>
            <value>
                <fullName>Alex Schulte</fullName>
            </value>
            <value>
                <fullName>Reg Schonborn</fullName>
            </value>
            <value>
                <fullName>Lucy Alexander</fullName>
            </value>
            <value>
                <fullName>Vanessa Coloma</fullName>
            </value>
            <value>
                <fullName>Dean Smithyman</fullName>
            </value>
            <value>
                <fullName>Lee-Anne Roodt</fullName>
            </value>
            <value>
                <fullName>Wells Howe</fullName>
            </value>
            <value>
                <fullName>Jordan Pentaleri</fullName>
            </value>
            <value>
                <fullName>Trevor Lennox</fullName>
            </value>
            <value>
                <fullName>Olivia Love</fullName>
            </value>
            <value>
                <fullName>Jennifer Matchett</fullName>
            </value>
            <value>
                <fullName>Chris Gosline</fullName>
            </value>
            <value>
                <fullName>Allison Rand</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>