force-app/main/default/objects/Activity/fields/Barrett_Billing_Blitz__c.field-meta.xml
<CustomField>
    <fullName>Barrett_Billing_Blitz__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Barrett Billing Blitz</label>
    <type>Checkbox</type>
</CustomField>