force-app/main/default/objects/Activity/fields/Call_Duration_in_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Call_Duration_in_Minutes__c</fullName>
    <formula>CallDurationInSeconds/60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Duration in Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>