force-app/main/default/objects/Activity/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accounting - ERP System Implementation</fullName>
            </value>
            <value>
                <fullName>Accounting - Executive Request</fullName>
            </value>
            <value>
                <fullName>Accounting - Financial Tracking &amp; Reporting</fullName>
            </value>
            <value>
                <fullName>Accounting - HR Policy</fullName>
            </value>
            <value>
                <fullName>Accounting - IT Support</fullName>
            </value>
            <value>
                <fullName>Accounting - Legacy Clean-up</fullName>
            </value>
            <value>
                <fullName>Business Development - Community Solar</fullName>
            </value>
            <value>
                <fullName>Business Development - Executive Request</fullName>
            </value>
            <value>
                <fullName>Business Development - Large offtake &amp; anchor</fullName>
            </value>
            <value>
                <fullName>Business Development - Residential Loan</fullName>
            </value>
            <value>
                <fullName>Executive - Business Development</fullName>
            </value>
            <value>
                <fullName>Executive - Corporate Finance &amp; Accounting</fullName>
            </value>
            <value>
                <fullName>Executive - Development</fullName>
            </value>
            <value>
                <fullName>Executive - External Affairs</fullName>
            </value>
            <value>
                <fullName>Executive - General Executive</fullName>
            </value>
            <value>
                <fullName>Executive - Operations</fullName>
            </value>
            <value>
                <fullName>Executive - Project &amp; Platform Finance</fullName>
            </value>
            <value>
                <fullName>External Affairs - B-Corp</fullName>
            </value>
            <value>
                <fullName>External Affairs - Community Service</fullName>
            </value>
            <value>
                <fullName>External Affairs - Conferences/Events</fullName>
            </value>
            <value>
                <fullName>External Affairs - Executive Request</fullName>
            </value>
            <value>
                <fullName>External Affairs - Government / Regulatory Affairs</fullName>
            </value>
            <value>
                <fullName>External Affairs - Newsletters</fullName>
            </value>
            <value>
                <fullName>External Affairs - Press Releases</fullName>
            </value>
            <value>
                <fullName>External Affairs - Social Media</fullName>
            </value>
            <value>
                <fullName>External Affairs - Team Support</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>EC - Business Operations</fullName>
                <label>Operations - Business Operations</label>
            </value>
            <value>
                <fullName>EC - Executive Request</fullName>
                <label>Operations - Executive Request</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>