force-app/main/default/objects/Activity/fields/ClickToDial__ClickToCallPhone__c.field-meta.xml
<CustomField>
    <fullName>ClickToDial__ClickToCallPhone__c</fullName>
    <label>Click-to-Call Phone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>