force-app/main/default/objects/Activity/fields/Customer_Care_Case__c.field-meta.xml
<CustomField>
    <fullName>Customer_Care_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select this checkbox to be able to create a new customer care case linked to this task</description>
    <inlineHelpText>Select this checkbox to be able to create a new customer care case linked to this task</inlineHelpText>
    <label>Customer Care Case</label>
    <type>Checkbox</type>
</CustomField>