force-app/main/default/objects/Activity/fields/Customer_Case_Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_Case_Unique_ID__c</fullName>
    <description>Unique ID for most recently created Customer Case. Populated by Trigger/Handler</description>
    <inlineHelpText>Unique ID for most recently created Customer Case. Populated by Trigger/Handler</inlineHelpText>
    <label>Customer Case Unique ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>