force-app/main/default/objects/Activity/fields/Customer_Reached__c.field-meta.xml
<CustomField>
    <fullName>Customer_Reached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Reached</label>
    <type>Checkbox</type>
</CustomField>