force-app/main/default/objects/Activity/fields/Disbursal__c.field-meta.xml
<CustomField>
    <fullName>Disbursal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disbursal</label>
    <type>Checkbox</type>
</CustomField>