force-app/main/default/objects/Activity/fields/Do_Not_Fire_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Fire_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Fire Triggers</label>
    <type>Checkbox</type>
</CustomField>