force-app/main/default/objects/Activity/fields/Due_Date_HIDDEN__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_HIDDEN__c</fullName>
    <formula>ActivityDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>