force-app/main/default/objects/Activity/fields/Engagement_Task__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Only select this option if it is an Engagement Task that is related to an Account</inlineHelpText>
    <label>Engagement Task</label>
    <type>Checkbox</type>
</CustomField>