force-app/main/default/objects/Activity/fields/Estimated_Completion_Time__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Completion_Time__c</fullName>
    <label>Time Spent on Task</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>