force-app/main/default/objects/Activity/fields/Is_Regeneration__c.field-meta.xml
<CustomField>
    <fullName>Is_Regeneration__c</fullName>
    <formula>IF ( OR( AND(CONTAINS(Subject, &apos;MN&apos;), 
             AND(Day(DATEVALUE(CreatedDate))&gt;16, 
                 Day(DATEVALUE(CreatedDate))&lt;=22)),
         AND(NOT(CONTAINS(Subject, &apos;MN&apos;)), 
             AND(Day(DATEVALUE(CreatedDate))&gt;11, 
                 Day(DATEVALUE(CreatedDate))&lt;=17))), 
    &apos;on Bill Date&apos;, 
    &apos;after Bill Day&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Regeneration</label>
    <type>Text</type>
</CustomField>