force-app/main/default/objects/Activity/fields/Late_Payment_Call__c.field-meta.xml
<CustomField>
    <fullName>Late_Payment_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Late Payment Call</label>
    <type>Checkbox</type>
</CustomField>