force-app/main/default/objects/Activity/fields/Lead_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Lead_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>