force-app/main/default/objects/Activity/fields/New_Customer_Outreach__c.field-meta.xml
<CustomField>
    <fullName>New_Customer_Outreach__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Customer Outreach</label>
    <type>Checkbox</type>
</CustomField>