force-app/main/default/objects/Activity/fields/Opportunity_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Related_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>