force-app/main/default/objects/Activity/fields/Partner_Call__c.field-meta.xml
<CustomField>
    <fullName>Partner_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partner Call</label>
    <type>Checkbox</type>
</CustomField>