force-app/main/default/objects/Activity/fields/Product_Inquiry__c.field-meta.xml
<CustomField>
    <fullName>Product_Inquiry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product Inquiry</label>
    <type>Checkbox</type>
</CustomField>