force-app/main/default/objects/Activity/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <label>Product Line</label>
    <type>Picklist</type>
    <valueSet>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Community Solar</fullName>
                
                
                    <label>Community Solar</label>
                
                </value>
            
                <value>
                
                    <fullName>Solar Loan</fullName>
                
                
                    <label>Solar Loan</label>
                
                </value>
            
                <value>
                
                    <fullName>Both</fullName>
                
                
                    <label>Both</label>
                
                </value>
            
                <value>
                
                    <fullName>Other</fullName>
                
                
                    <label>Other</label>
                
                </value>
            
                <value>
                
                    <fullName>Large Offtake</fullName>
                
                
                    <label>Large Offtake</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>