force-app/main/default/objects/Activity/fields/Queue_Duration__c.field-meta.xml
<CustomField>
    <fullName>Queue_Duration__c</fullName>
    <formula>IF( ISNULL(  Actual_Complete_Date__c  ) ,  TODAY() -   Start_Date__c  ,    Actual_Complete_Date__c  -   Start_Date__c   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Queue Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>