force-app/main/default/objects/Activity/fields/Related_Utility_Account_Log__c.field-meta.xml
<CustomField>
    <fullName>Related_Utility_Account_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related To: UAL</description>
    <label>Related Utility Account Log</label>
    <referenceTo>Utility_Account_Log__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>