force-app/main/default/objects/Activity/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <description>Input from Webform on who requested the work.</description>
    <label>Requested By:</label>
    <type>Email</type>
</CustomField>