force-app/main/default/objects/Activity/fields/Task_Category__c.field-meta.xml
<CustomField>
    <fullName>Task_Category__c</fullName>
    <inlineHelpText>Select all of the topics that best describe the reason for the interaction and the topics covered.</inlineHelpText>
    <label>Topic</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Billing</fullName>
                
                
                    <label>Billing</label>
                
                </value>
            
                <value>
                
                    <fullName>Cancellation</fullName>
                
                
                    <label>Cancellation</label>
                
                </value>
            
                <value>
                
                    <fullName>Fairhaven and Clara Barton Call-a-thon</fullName>
                
                
                    <label>Fairhaven and Clara Barton Call-a-thon</label>
                
                </value>
            
                <value>
                
                    <fullName>Fairhaven and Clara Barton Fiasco</fullName>
                
                
                    <label>Fairhaven and Clara Barton Fiasco</label>
                
                </value>
            
                <value>
                
                    <fullName>General CS</fullName>
                
                
                    <label>General CS</label>
                
                </value>
            
                <value>
                
                    <fullName>How much will I save</fullName>
                
                
                    <label>How much will I save</label>
                
                </value>
            
                <value>
                
                    <fullName>How to Pay Bill</fullName>
                
                
                    <label>How to Pay Bill</label>
                
                </value>
            
                <value>
                
                    <fullName>Payment Plan</fullName>
                
                
                    <label>Payment Plan</label>
                
                </value>
            
                <value>
                
                    <fullName>Portal Log In</fullName>
                
                
                    <label>Portal Log In</label>
                
                </value>
            
                <value>
                
                    <fullName>Subscription Size Change</fullName>
                
                
                    <label>Subscription Size Change</label>
                
                </value>
            
                <value>
                
                    <fullName>When will I see credits on my account</fullName>
                
                
                    <label>When will I see credits on my account</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>