force-app/main/default/objects/Activity/fields/Task_Performed__c.field-meta.xml
<CustomField>
    <fullName>Task_Performed__c</fullName>
    <description>Used by Project Management tasks</description>
    <label>Task Performed</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>00. Payment Schedule</fullName>
            </value>
            <value>
                <fullName>01. Pre-Application Report</fullName>
            </value>
            <value>
                <fullName>02. Diligence Report</fullName>
            </value>
            <value>
                <fullName>03. Interconnection Application Packet (Original/Revised)</fullName>
            </value>
            <value>
                <fullName>04. Technical Pre-Study (Screening/Preliminary/Feasibility)</fullName>
            </value>
            <value>
                <fullName>05. Legal Form</fullName>
            </value>
            <value>
                <fullName>06. Technical Study (ASO, SIS, ESS, Restudy)</fullName>
            </value>
            <value>
                <fullName>07. 20-50BD Technical Study Review</fullName>
            </value>
            <value>
                <fullName>08. ISA &amp; Amendment</fullName>
            </value>
            <value>
                <fullName>09. Federal &amp; State Incentive</fullName>
            </value>
            <value>
                <fullName>10. Utility Design and Easement</fullName>
            </value>
            <value>
                <fullName>11. Wireless Test</fullName>
            </value>
            <value>
                <fullName>12. Utility Construction</fullName>
            </value>
            <value>
                <fullName>13. Telecommunication</fullName>
            </value>
            <value>
                <fullName>14. Witness Test</fullName>
            </value>
            <value>
                <fullName>15. Consent to Assignment</fullName>
            </value>
            <value>
                <fullName>16. Transfer of Ownership</fullName>
            </value>
            <value>
                <fullName>25% ISA Payment</fullName>
            </value>
            <value>
                <fullName>75% ISA Payment</fullName>
            </value>
            <value>
                <fullName>Acquisition</fullName>
            </value>
            <value>
                <fullName>Admin (Salesforce, organization, planning, management)</fullName>
            </value>
            <value>
                <fullName>Asset Management</fullName>
            </value>
            <value>
                <fullName>Blast Letter</fullName>
            </value>
            <value>
                <fullName>Budget/Cashflow review</fullName>
            </value>
            <value>
                <fullName>Budgets</fullName>
            </value>
            <value>
                <fullName>Community Service</fullName>
            </value>
            <value>
                <fullName>Community Solar</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Construction Administration</fullName>
            </value>
            <value>
                <fullName>Construction Budget</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>