force-app/main/default/objects/Activity/fields/Task_Size__c.field-meta.xml
<CustomField>
    <fullName>Task_Size__c</fullName>
    <description>1 - Basic - e.g. Unconnected Field
2 - Moderate - e.g. Formula Field
3 - Advanced non-Apex - e.g. Workflow
5 - Basic Apex Edit, Complex Workflow/Formula
8 - New Apex
13 - New Apex With Test Class</description>
    <inlineHelpText>1 - Basic - e.g. Unconnected Field
2 - Moderate - e.g. Formula Field
3 - Advanced non-Apex - e.g. Workflow
5 - Basic Apex Edit, Complex Workflow/Formula
8 - New Apex
13 - New Apex With Test Class</inlineHelpText>
    <label>Task Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>13</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>