force-app/main/default/objects/Activity/fields/Task_Subject__c.field-meta.xml
<CustomField>
    <fullName>Task_Subject__c</fullName>
    <description>Select the Subject that applies to the task. If none apply, choose &quot;Other&quot; and explain the task in the Comment section.</description>
    <label>Task Subject</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Adjust subscription, &gt;25kW</fullName>
                
                
                    <label>Adjust subscription, &gt;25kW</label>
                
                </value>
            
                <value>
                
                    <fullName>Change account # on contract</fullName>
                
                
                    <label>Change account # on contract</label>
                
                </value>
            
                <value>
                
                    <fullName>Change load zone</fullName>
                
                
                    <label>Change load zone</label>
                
                </value>
            
                <value>
                
                    <fullName>Change to commercial</fullName>
                
                
                    <label>Change to commercial</label>
                
                </value>
            
                <value>
                
                    <fullName>Check Comments About Sizing section</fullName>
                
                
                    <label>Check Comments About Sizing section</label>
                
                </value>
            
                <value>
                
                    <fullName>Check contract, handwritten</fullName>
                
                
                    <label>Check contract, handwritten</label>
                
                </value>
            
                <value>
                
                    <fullName>Credit report did not match customer&apos;s name, attach credit check for right customer</fullName>
                
                
                    <label>Credit report did not match customer&apos;s name, attach credit check for right customer</label>
                
                </value>
            
                <value>
                
                    <fullName>Credit report is missing, Upload correct credit report</fullName>
                
                
                    <label>Credit report is missing, Upload correct credit report</label>
                
                </value>
            
                <value>
                
                    <fullName>Custom&apos;s credit was denied , change stage to unqualified</fullName>
                
                
                    <label>Custom&apos;s credit was denied , change stage to unqualified</label>
                
                </value>
            
                <value>
                
                    <fullName>Customer email missing</fullName>
                
                
                    <label>Customer email missing</label>
                
                </value>
            
                <value>
                
                    <fullName>Load zone missing on utility bill</fullName>
                
                
                    <label>Load zone missing on utility bill</label>
                
                </value>
            
                <value>
                
                    <fullName>Other</fullName>
                
                
                    <label>Other</label>
                
                </value>
            
                <value>
                
                    <fullName>Subscription adjustment needed</fullName>
                
                
                    <label>Subscription adjustment needed</label>
                
                </value>
            
                <value>
                
                    <fullName>Too few years at location</fullName>
                
                
                    <label>Too few years at location</label>
                
                </value>
            
                <value>
                
                    <fullName>Too few years in business</fullName>
                
                
                    <label>Too few years in business</label>
                
                </value>
            
                <value>
                
                    <fullName>Upload complete contract</fullName>
                
                
                    <label>Upload complete contract</label>
                
                </value>
            
                <value>
                
                    <fullName>Upload complete utility bill to utility Account Log</fullName>
                
                
                    <label>Upload complete utility bill to utility Account Log</label>
                
                </value>
            
                <value>
                
                    <fullName>Upload Green Button Data</fullName>
                
                
                    <label>Upload Green Button Data</label>
                
                </value>
            
                <value>
                
                    <fullName>Upload utility bill without overdue payments</fullName>
                
                
                    <label>Upload utility bill without overdue payments</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>