force-app/main/default/objects/Activity/fields/Technical_Assisstance__c.field-meta.xml
<CustomField>
    <fullName>Technical_Assisstance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Technical Assistance</label>
    <type>Checkbox</type>
</CustomField>