force-app/main/default/objects/Activity/fields/Topic_Billing__c.field-meta.xml
<CustomField>
    <fullName>Topic_Billing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Billing</label>
    <type>Checkbox</type>
</CustomField>