force-app/main/default/objects/Activity/fields/Tracking__c.field-meta.xml
<CustomField>
    <fullName>Tracking__c</fullName>
    <description>Field created 3/27/17 by Nick Speyer to accomodate Product Roadmap Reporting</description>
    <inlineHelpText>Field created 3/27/17 by Nick Speyer to accomodate Product Roadmap Reporting</inlineHelpText>
    <label>Tracking</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>On Time</fullName>
                
                
                    <label>On Time</label>
                
                </value>
            
                <value>
                
                    <fullName>Adjusted Schedule</fullName>
                
                
                    <label>Adjusted Schedule</label>
                
                </value>
            
                <value>
                
                    <fullName>Behind Schedule</fullName>
                
                
                    <label>Behind Schedule</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>