force-app/main/default/objects/Activity/fields/truly_callDuration__c.field-meta.xml
<CustomField>
    <fullName>truly_callDuration__c</fullName>
    <description>duration of a call formatted</description>
    <label>Call Duration</label>
    <length>50</length>
    <type>Text</type>
</CustomField>