force-app/main/default/objects/Activity/fields/truly_callDurationMinutes__c.field-meta.xml
<CustomField>
    <fullName>truly_callDurationMinutes__c</fullName>
    <label>Call Duration (Minutes)</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>