force-app/main/default/objects/Activity/fields/truly_caller__c.field-meta.xml
<CustomField>
    <fullName>truly_caller__c</fullName>
    <label>Caller</label>
    <length>50</length>
    <type>Text</type>
</CustomField>