force-app/main/default/objects/Activity/fields/truly_callerNumber__c.field-meta.xml
<CustomField>
    <fullName>truly_callerNumber__c</fullName>
    <label>Caller Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>