force-app/main/default/objects/Activity/fields/truly_customCallDisposition__c.field-meta.xml
<CustomField>
    <fullName>truly_customCallDisposition__c</fullName>
    <label>Custom Call Disposition</label>
    <length>250</length>
    <type>Text</type>
</CustomField>