force-app/main/default/objects/Activity/fields/truly_dayOfWeek__c.field-meta.xml
<CustomField>
    <fullName>truly_dayOfWeek__c</fullName>
    <label>Day of Week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>