force-app/main/default/objects/Activity/fields/truly_direction__c.field-meta.xml
<CustomField>
    <fullName>truly_direction__c</fullName>
    <label>Direction</label>
    <length>25</length>
    <type>Text</type>
</CustomField>