force-app/main/default/objects/Activity/fields/truly_hourOfDay__c.field-meta.xml
<CustomField>
    <fullName>truly_hourOfDay__c</fullName>
    <label>Hour of Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>