force-app/main/default/objects/Activity/fields/truly_id__c.field-meta.xml
<CustomField>
    <fullName>truly_id__c</fullName>
    <label>Truly Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>