force-app/main/default/objects/Activity/fields/truly_missed__c.field-meta.xml
<CustomField>
    <fullName>truly_missed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Missed</label>
    <type>Checkbox</type>
</CustomField>