force-app/main/default/objects/Activity/fields/truly_queued__c.field-meta.xml
<CustomField>
    <fullName>truly_queued__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Queued</label>
    <type>Checkbox</type>
</CustomField>