force-app/main/default/objects/Activity/fields/truly_queueDropOff__c.field-meta.xml
<CustomField>
    <fullName>truly_queueDropOff__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Queue Drop Off</label>
    <type>Checkbox</type>
</CustomField>