force-app/main/default/objects/Activity/fields/truly_recording__c.field-meta.xml
<CustomField>
    <fullName>truly_recording__c</fullName>
    <label>Recording</label>
    <type>Url</type>
</CustomField>