force-app/main/default/objects/Activity/fields/truly_startTime__c.field-meta.xml
<CustomField>
    <fullName>truly_startTime__c</fullName>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>